[gd_scene load_steps=2 format=2]

[ext_resource path="res://Login.gd" type="Script" id=1]

[node name="LoginScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 250.0
margin_top = 100.0
margin_right = 775.0
margin_bottom = 500.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 525.0
margin_bottom = 400.0

[node name="EmailText" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 525.0
margin_bottom = 97.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/EmailText"]
margin_top = 41.0
margin_right = 260.0
margin_bottom = 55.0
size_flags_horizontal = 3
text = "Email:"
align = 1
valign = 1

[node name="EmailText" type="LineEdit" parent="MarginContainer/VBoxContainer/EmailText"]
margin_left = 264.0
margin_right = 525.0
margin_bottom = 97.0
size_flags_horizontal = 3

[node name="PasswordText" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 101.0
margin_right = 525.0
margin_bottom = 198.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PasswordText"]
margin_top = 41.0
margin_right = 260.0
margin_bottom = 55.0
size_flags_horizontal = 3
text = "Password"
align = 1
valign = 1

[node name="PasswordText" type="LineEdit" parent="MarginContainer/VBoxContainer/PasswordText"]
margin_left = 264.0
margin_right = 525.0
margin_bottom = 97.0
size_flags_horizontal = 3

[node name="Login" type="Button" parent="MarginContainer/VBoxContainer"]
margin_left = 239.0
margin_top = 202.0
margin_right = 285.0
margin_bottom = 299.0
size_flags_horizontal = 4
size_flags_vertical = 3
text = "Login"
script = ExtResource( 1 )

[node name="Status" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 303.0
margin_right = 525.0
margin_bottom = 400.0
size_flags_vertical = 3
align = 1
valign = 1
[connection signal="text_changed" from="MarginContainer/VBoxContainer/EmailText/EmailText" to="MarginContainer/VBoxContainer/Login" method="_on_LineEdit_text_changed"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/EmailText/EmailText" to="MarginContainer/VBoxContainer/Login" method="_on_EmailText_text_changed"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/PasswordText/PasswordText" to="MarginContainer/VBoxContainer/Login" method="_on_LineEdit_text_changed"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/PasswordText/PasswordText" to="MarginContainer/VBoxContainer/Login" method="_on_PasswordText_text_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Login" to="MarginContainer/VBoxContainer/Login" method="_on_Login_pressed"]
